[project]
name            = "helm-data-downloader"
version         = "0.1.0"
description     = "Add your description here"
authors         = [{ name = "Wout Schellaert", email = "wout.schellaert@gmail.com" }]
dependencies    = ["requests>=2.31.0", "pyquery>=2.0.0", "tqdm>=4.66.1"]
readme          = "README.md"
requires-python = ">= 3.8"

[project.scripts]
download = "helm_data_downloader.download:main"

[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed          = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true
