[project]
name            = "helm-data-downloader"
version         = "0.1.0"
description     = "Download (all) evaluation data from the Stanford HELM benchmarking effort."
authors         = [{ name = "Wout Schellaert", email = "wout@schellaert.org" }]
dependencies    = ["requests>=2.31.0", "tqdm>=4.66.1"]
readme          = "README.md"
requires-python = ">= 3.8"

[project.scripts]
helmdd = "helm_data_downloader.download:main"

[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = ["src/"]
exclude = [".vscode/", "examples/"]

[tool.rye]
managed          = true
dev-dependencies = ["mypy>=1.5.1", "autopep8>=2.0.4"]

[tool.hatch.metadata]
allow-direct-references = true
